Adding API-functions to get all objects of certain type
