# CipherData/ChangedOpenAPI.yaml
@@ -530,6 +530,27 @@ components:
                 description: List of ID masks to identify the category from the package ID
                 items:
                   type: string
+    SystemMinimalDetails:
+      description: A contract for getting one of the many options of system-object, using minimal amount of details
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              id: 
+                type: string
+                description: Searchable ID for the object
+              description:
+                type: string
+                description: Description of system
+              parentId:
+                type: string
+                nullable: true
+                description: Parent system's searchable id (containing this one)
+              unitDescription:
+                type: string
+                description: Description of the unit containing this system
+              
     SystemRequest:
       description: Create a new system or update it
       content:
@@ -612,6 +633,26 @@ components:
             items:
               $ref: "#/components/schemas/UserAction"
 paths:
+  /packages:
+    get:
+      summary: Get all packages
+      operationId: getPackages
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema: 
+                type: array
+                items:
+                  $ref: "#/components/schemas/Package"
+        '400':
+          description: Bad request
+          $ref: "#/components/responses/ErrorResponse"
+        '401':
+          description: Unauthorized
+          $ref: "#/components/responses/ErrorResponse"
+      
   /packages/{id}:
     get:
       summary: Get details about a single package given package ID
@@ -734,6 +775,24 @@ paths:
           description: Not found
           $ref: "#/components/responses/ErrorResponse"
   /systems:
+    get: 
+      summary: Get all available systems
+      operationId: getSystems
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema: 
+                type: array
+                items:
+                  $ref: "#/components/responses/SystemMinimalDetails"
+        '400':
+          description: Bad request
+          $ref: "#/components/responses/ErrorResponse"
+        '401':
+          description: Unauthorized
+          $ref: "#/components/responses/ErrorResponse"
     post:
       summary: Create a new system
       operationId: createSystem
@@ -934,6 +993,24 @@ paths:
           description: Not found
           $ref: "#/components/responses/ErrorResponse"
   /categories:
+    get:
+      summary: Get all categories
+      operationId: getCategories
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema: 
+                type: array
+                items:
+                  $ref: "#/components/schemas/Category"
+        '400':
+          description: Bad request
+          $ref: "#/components/responses/ErrorResponse"
+        '401':
+          description: Unauthorized
+          $ref: "#/components/responses/ErrorResponse"
     post:
       summary: Create a new category
       operationId: createCategory
