# CipherData/Models/StorageSystem.cs
@@ -85,11 +85,14 @@ namespace CipherData.Models
         /// <param name="id">only use if you want the object to have a specific id</param>
         public static StorageSystem Random(string? id = null)
         {
+            List<string> SystemsDescriptions = new() { "תחום", "מעבדה", "מבנה" };
+
             return new(
                 id: id,
-                description: Globals.GetRandomString(Globals.SystemsDescriptions),
+                description: TestedData.RandomString(SystemsDescriptions),
                 properties: "",
-                unit: Unit.Random()
+                unit: Unit.Random(),
+                parent: (new Random().Next(0, 5) == 0) ? Random() : null
                 );
         }
 
@@ -108,5 +111,53 @@ namespace CipherData.Models
                                 }, @operator: Operator.Or));
         }
 
+        /// <summary>
+        /// All events that took place in a certain system
+        /// </summary>
+        /// <param name="SelectedSystem"></param>
+        /// <returns></returns>
+        public static Tuple<List<StorageSystem>?, ErrorResponse> All()
+        {
+            return SystemsRequests.GetSystems();
+        }
+
+        /// <summary>
+        /// All events that took place in a certain system
+        /// </summary>
+        /// <param name="SelectedSystem"></param>
+        /// <returns></returns>
+        public static Tuple<List<Event>?, ErrorResponse> Events(string SelectedSystem)
+        {
+            return GetObjects<Event>(SelectedSystem, SelectedSystem => new GroupedBooleanCondition(conditions: new()
+            {
+                new BooleanCondition(attribute: "Event.Packages.System.Id", attributeRelation: AttributeRelation.Eq, value: SelectedSystem)
+            }, @operator: Operator.Or));
+        }
+
+        /// <summary>
+        /// All processes that took place in a certain system
+        /// </summary>
+        /// <param name="SelectedSystem"></param>
+        /// <returns></returns>
+        public static Tuple<List<Process>?, ErrorResponse> Processes(string SelectedSystem)
+        {
+            return GetObjects<Process>(SelectedSystem, SelectedSystem => new GroupedBooleanCondition(conditions: new()
+            {
+                new BooleanCondition(attribute: "Process.Events.Packages.System.Id", attributeRelation: AttributeRelation.Eq, value: SelectedSystem)
+            }, @operator: Operator.Or));
+        }
+
+
+
+        /// <summary>
+        /// All packages that took place in a certain system
+        /// </summary>
+        public static Tuple<List<Package>?, ErrorResponse> Packages(string SelectedSystem)
+        {
+            return GetObjects<Package>(SelectedSystem, SelectedSystem => new GroupedBooleanCondition(conditions: new()
+            {
+                new BooleanCondition(attribute: "Package.System.Id", attributeRelation: AttributeRelation.Eq, value: SelectedSystem)
+            }, @operator: Operator.Or));
+        }
     }
 }
