# CipherData/Requests/GenericRequests.cs
@@ -1,17 +1,22 @@
 ﻿using CipherData.Models;
+using System.Reflection;
 
 namespace CipherData.Requests
 {
     public class GenericRequests
     {
         /// <summary>
-        /// Create a new category.
-        /// Path: POST /categories
+        /// General request from the API
         /// </summary>
-        public static Tuple<T?, ErrorResponse> Request<T>(T successResult, bool canBadRequest=true, bool canBeNotFound = false, bool canFail = true)
+        /// <typeparam name="T"></typeparam>
+        /// <param name="successResult">Result in case request was successful</param>
+        /// <param name="canBadRequest">is bad request an optionional result</param>
+        /// <param name="canBeNotFound">is not found an optional result</param>
+        /// <param name="canFail">only for testing. in real api, of course it may fail</param>
+        /// <returns></returns>
+        public static Tuple<T?, ErrorResponse> Request<T>(T successResult, bool canBadRequest=true, bool canBeNotFound = false, bool canFail = false)
         {
-            Random rand = new();
-            int result = rand.Next(1, 4);
+            int result = new Random().Next(1, 4);
 
             if (canFail)
             {
